--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@ h1 {
 }
 </style>
 
-<h1>Hello World</h1>
+<h1>Hello World!!!</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+  <script>
+    alert( 'Hello, world!' );
+  </script>
+  
 </body>
 </html>
