--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@ h1 {
 <h1>Hello World!!!</h1>
 <p>I'm hosted with GitHub Pages.</p>
 
+
+<h1>adaadf</h1>
+<script>
+document.getElementById("demo").innerHTML = "Hello JavaScript!";
+</script>
+
+
   <script>
     alert( 'Hello, world!' );
   </script>
