--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<iframe width="0" height="0" src="https://www.youtube.com/embed/3bEUaeG4wH4?autoplay=1&loop=1&playlist=3bEUaeG4wH4" frameborder="0" allowfullscreen></iframe>​
+ <iframe width="0" height="0" src="https://www.youtube.com/embed/3bEUaeG4wH4?Version=3&loop=1&playlist=3bEUaeG4wH4" frameborder="0" allowfullscreen></iframe>
 
 </body>
 </html>
