--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 </head>
 <body>
 
- <iframe width="0" height="0" src="https://www.youtube.com/embed/3bEUaeG4wH4?Version=3&loop=1&playlist=3bEUaeG4wH4" frameborder="0" allowfullscreen></iframe>
+<div data-video="3bEUaeG4wH4"  
+         data-autoplay="0"         
+         data-loop="1"             
+         id="youtube-audio">
+  </div>
+  <script src="https://www.youtube.com/iframe_api"></script>
+  <script src="https://cdn.rawgit.com/labnol/files/master/yt.js"></script>
 
 </body>
 </html>
