--- a/index.html
+++ b/index.html
@@ -4,14 +4,24 @@
 	<title>Elson Sukaj</title>
 </head>
 <body>
+	
+<div id="divSample" class="hideClass">
+<style>
+.hideClass
+{display:none;}
+</style>
+
 
 <div data-video="3bEUaeG4wH4"  
-         data-autoplay="1"         
+         data-autoplay="0"         
          data-loop="1"             
          id="youtube-audio">
   </div>
   <script src="https://www.youtube.com/iframe_api"></script>
   <script src="https://cdn.rawgit.com/labnol/files/master/yt.js"></script>
+</div>
+
+
 
 </body>
 </html>
