--- a/index.html
+++ b/index.html
@@ -5,21 +5,24 @@
 </head>
 <body>
 	
-<div id="divSample" class="hideClass">
+
+<div id="divSample" class="hideClass" data-video="3bEUaeG4wH4">  
+
 <style>
 .hideClass
 {display:none;}
-</style>
-
-
-<div data-video="3bEUaeG4wH4"  
-         data-autoplay="0"         
+</style>         
+	
+	data-autoplay="0"         
          data-loop="1"             
          id="youtube-audio">
+
   </div>
   <script src="https://www.youtube.com/iframe_api"></script>
   <script src="https://cdn.rawgit.com/labnol/files/master/yt.js"></script>
-</div>
+
+
+
 
 
 
