--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<title>Elson Sukaj</title>
 </head>
 <body>
-<iframe width="0" height="0" src="https://www.youtube.com/embed/3bEUaeG4wH4?rel=0" ></iframe>
-
+<iframe width="0" height="0" src="https://www.youtube.com/embed/3bEUaeG4wH4?autoplay=1"></iframe>
 </body>
 </html>
