--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 </head>
 <body>
 
-	<iframe width="0" height="0" src="https://www.youtube.com/embed/
-3bEUaeG4wH4?autoplay=1&cc_load_policy=1" frameborder="0"
-allowfullscreen></iframe>
-	
+<iframe title="YouTube video player" class="youtube-player" type="text/html" width="0" height="0" src="http://www.youtube.com/embed/3bEUaeG4wH4?autoplay=1" frameborder="0" allowFullScreen></iframe>
+
 </body>
 </html>
