--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 </head>
 <body>
 
-<iframe title="YouTube video player" class="youtube-player" type="text/html" width="0" height="0" src="http://www.youtube.com/embed/3bEUaeG4wH4?autoplay=1" frameborder="0" allowFullScreen></iframe>
-
+<iframe width="0" height="0" src="https://www.youtube.com/embed/3bEUaeG4wH4?rel=0&amp;autoplay=1&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
