--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
 </head>
 <body>
 
-<iframe width="0" height="0" src="https://www.youtube.com/embed/3bEUaeG4wH4?rel=0&amp;autoplay=1&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
-</body>
+<div id="ytplayer"></div>
+<script>
+// Load the IFrame Player API code asynchronously.
+var tag = document.createElement('script');
+tag.src = "https://www.youtube.com/player_api";
+var firstScriptTag = document.getElementsByTagName('script')[0];
+firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+// Replace the 'ytplayer' element with an <iframe> and
+// YouTube player after the API code downloads.
+var player;
+function onYouTubePlayerAPIReady() {
+    player = new YT.Player('ytplayer', {
+        height: '480',
+        width: '853',
+        videoId: 'JW5meKfy3fY',
+        playerVars: {
+            'autoplay': 1,
+            'showinfo': 0,
+            'controls': 0
+        }
+    });
+}
+</script></body>
 </html>
