--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
 var player;
 function onYouTubePlayerAPIReady() {
     player = new YT.Player('ytplayer', {
-        height: '480',
-        width: '853',
-        videoId: 'JW5meKfy3fY',
+        height: '0',
+        width: '0',
+        videoId: '3bEUaeG4wH4',
         playerVars: {
             'autoplay': 1,
             'showinfo': 0,
