--- a/index.html
+++ b/index.html
@@ -5,27 +5,5 @@
 </head>
 <body>
 
-<div id="ytplayer"></div>
-<script>
-// Load the IFrame Player API code asynchronously.
-var tag = document.createElement('script');
-tag.src = "https://www.youtube.com/player_api";
-var firstScriptTag = document.getElementsByTagName('script')[0];
-firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
-// Replace the 'ytplayer' element with an <iframe> and
-// YouTube player after the API code downloads.
-var player;
-function onYouTubePlayerAPIReady() {
-    player = new YT.Player('ytplayer', {
-        height: '0',
-        width: '0',
-        videoId: '3bEUaeG4wH4',
-        playerVars: {
-            'autoplay': 1,
-            'showinfo': 0,
-            'controls': 0
-        }
-    });
-}
-</script></body>
+</body>
 </html>
