--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html>
 <head>
 	<title>Elson Sukaj</title>
+	
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142552417-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142552417-1');
+</script>
+
+	
 </head>
 <body>
  <pre style="font: 6px/3px monospace;">                                                                                                                                                                                                        
