--- a/index.html
+++ b/index.html
@@ -226,6 +226,25 @@
         document.getElementsByTagName("head")[0].appendChild(mf);
     })();
 </script>
+
+	
+	<!-- Default Statcounter code
+https://elsonsukaj.com -->
+<script type="text/javascript">
+var sc_project=12031988; 
+var sc_invisible=1; 
+var sc_security="060f56c6"; 
+var sc_https=1; 
+var sc_remove_link=1; 
+</script>
+<script type="text/javascript"
+src="https://www.statcounter.com/counter/counter.js"
+async></script>
+<noscript><div class="statcounter"><img class="statcounter"
+src="https://c.statcounter.com/12031988/0/060f56c6/1/"
+alt="Web Analytics"></div></noscript>
+<!-- End of Statcounter Code -->
+	
 	
 </body>
 </html>
