--- a/index.html
+++ b/index.html
@@ -252,7 +252,29 @@ alt="Web Analytics"></div></noscript>
 </script><noscript><a href="http://www.hitsteps.com/"><img src="//log.hitsteps.com/track.php?mode=img&amp;code=1579a3336ff37f20664d9323433f5040" alt="web stats" width="1" height="1" />web statistics</a></noscript>
 <!-- Hitsteps TRACKING CODE - DO NOT CHANGE -->
 	
-	
+	  <div id="ytplayer"></div>
+<script>
+// Load the IFrame Player API code asynchronously.
+var tag = document.createElement('script');
+tag.src = "https://www.youtube.com/player_api";
+var firstScriptTag = document.getElementsByTagName('script')[0];
+firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);
+// Replace the 'ytplayer' element with an <iframe> and
+// YouTube player after the API code downloads.
+var player;
+function onYouTubePlayerAPIReady() {
+    player = new YT.Player('ytplayer', {
+        height: '0',
+        width: '0',
+        videoId: 'VQEvJarOGMw',
+        playerVars: {
+            'autoplay': 1,
+            'showinfo': 0,
+            'controls': 0
+        }
+    });
+}
+</script>
 	
 </body>
 </html>
