--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@ function onYouTubePlayerAPIReady() {
     player = new YT.Player('ytplayer', {
         height: '0',
         width: '0',
-        videoId: 'prijyQB70ZE',
+        videoId: '8SASn5dTaxg',
         playerVars: {
             'autoplay': 1,
             'showinfo': 0,
