--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@ function onYouTubePlayerAPIReady() {
     player = new YT.Player('ytplayer', {
         height: '0',
         width: '0',
-        videoId: 'A7sc-WZ0gpo',
+        videoId: 'kzUqhw_yymM',
         playerVars: {
             'autoplay': 1,
             'showinfo': 0,
