--- a/404.html
+++ b/404.html
@@ -7,4 +7,4 @@ permalink: /index.html
 
 # 404
 
-Page not found! :( Go to the main page through <a href="https://elsonsukaj.com">elsonsukaj.com</a>
+Page not found! :( Go back!
