--- a/404.html
+++ b/404.html
@@ -7,4 +7,15 @@ permalink: /404.html
 
 # 404
 
-Page not found! :(
+#Page not found! :(
+
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>HTML Meta Tag</title>
+      <meta http-equiv = "refresh" content = "2; url = https://elsonsukaj.com" />
+   </head>
+   <body>
+      <p>Page not found! :(</p>
+   </body>
+</html>
