--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 
-
+permalink: /404.html
 
 <!DOCTYPE html>
 <html>
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "2; url = https://elsonsukaj.com" />
+      <meta http-equiv = "refresh" content = "0; url = https://elsonsukaj.com" />
    </head>
    <body>
       
