--- a/404.html
+++ b/404.html
@@ -5,9 +5,9 @@ permalink: /404.html
 <html>
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "0; url = https://elsonsukaj.com" />
+      <meta http-equiv = "refresh" content = "3; url = https://elsonsukaj.com" />
    </head>
-   <body>
+   <<body style="background-color:black;text-align:center">
       
    </body>
 </html>
