--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@ permalink: /404.html
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Meta Tag</title>
+      <title>ERROR 404</title>
       <meta http-equiv = "refresh" content = "2; url = https://elsonsukaj.com" />
    </head>
    <<body style="background-color:black;text-align:center">
